--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
 <p>Text excerpts from: <a href="https://www.gutenberg.org/">Project Gutenberg</a></p>
 <strong>
-    <ul>
-        <li>Beck Sanders</li>
-        <li>ITMD-361</li>
-        <li>Lab 3</li>
-    </ul>
-</strong>
+<ul style="font-weight: bold;">
+  <li>Beck Sanders</li>
+  <li>ITMD-361</li>
+  <li>Lab 3</li>
+</ul>
 
 </body>
 </html>
+
